# Cpp_Project_Template

./: .gitignore  CMakeLists.txt  README.md
apps/: app.cpp  guiapp_windows.cpp
examples/: addLinkedListInts.cpp  astar.cpp  makeBookingAvoidTriplebooking.cpp  timer.cpp  uniqueSum.cpp
include/: Widget.h  class1.h
library1/: CMakeLists.txt  library1Class.cpp  library1Class.h
library2/: CMakeLists.txt  library2Class.cpp  library2Class.h
src/: CMakeLists.txt  Widget.cpp  class1.cpp
tests/: CMakeLists.txt
tests/googletest/: CMakeLists.txt
tests/unit_tests/: CMakeLists.txt
tests/unit_tests/Widget/: CMakeLists.txt  WidgetTests.cpp
tests/unit_tests/class1/: CMakeLists.txt  class1_tests.cpp
tools/: CMakeLists.txt
tools/ci_setup/: Jenkinsfile  some_code_checking_script.py
tools/tool_1/: CMakeLists.txt  tool.cpp  tool.h  tool_main.cpp
umlDiagrams/: test.uxf
